# mirai

./: Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  treefmt.nix
.github/actions/: main.yml
src/: main.rs
