[package]
name = "mirai"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
console-subscriber = "0.4.1"
tokio = { version = "1.43.0", features = [
  "default",
  "rt-multi-thread",
  "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
